--- a/Resources/ResourceDictionary.xaml
+++ b/Resources/ResourceDictionary.xaml
@@ -1,306 +1,19 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!-- 1. 색상 정의 -->
-    <Color x:Key="PrimaryColor">#1890FF</Color>
-    <Color x:Key="ErrorColor">#FF4D4F</Color>
-    <Color x:Key="WarningColor">#FAAD14</Color>
-    <Color x:Key="SuccessColor">#52C41A</Color>
-    <Color x:Key="InfoColor">#1890FF</Color>
-    <Color x:Key="BorderColor">#EAEAEA</Color>
-    <Color x:Key="BackgroundColor">#FFFFFF</Color>
-    <Color x:Key="TextPrimaryColor">#333333</Color>
-    <Color x:Key="TextSecondaryColor">#666666</Color>
-    <Color x:Key="HoverBackgroundColor">#F6F6F6</Color>
-    <Color x:Key="HeaderBackgroundColor">#FAFAFA</Color>
+    <ResourceDictionary.MergedDictionaries>
+        <!-- 1. 색상 정의 - 가장 기본이 되는 요소 -->
+        <ResourceDictionary Source="/Resources/Colors.xaml"/>
 
-    <!-- 2. 색상 브러시 -->
-    <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource PrimaryColor}"/>
-    <SolidColorBrush x:Key="ErrorBrush" Color="{StaticResource ErrorColor}"/>
-    <SolidColorBrush x:Key="WarningBrush" Color="{StaticResource WarningColor}"/>
-    <SolidColorBrush x:Key="SuccessBrush" Color="{StaticResource SuccessColor}"/>
-    <SolidColorBrush x:Key="InfoBrush" Color="{StaticResource InfoColor}"/>
-    <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderColor}"/>
-    <SolidColorBrush x:Key="BackgroundBrush" Color="{StaticResource BackgroundColor}"/>
-    <SolidColorBrush x:Key="TextPrimaryBrush" Color="{StaticResource TextPrimaryColor}"/>
-    <SolidColorBrush x:Key="TextSecondaryBrush" Color="{StaticResource TextSecondaryColor}"/>
-    <SolidColorBrush x:Key="HoverBackgroundBrush" Color="{StaticResource HoverBackgroundColor}"/>
-    <SolidColorBrush x:Key="HeaderBackgroundBrush" Color="{StaticResource HeaderBackgroundColor}"/>
+        <!-- 2. 크기와 여백 정의 -->
+        <ResourceDictionary Source="/Resources/Dimensions.xaml"/>
 
-    <!-- 3. 폰트 사이즈 -->
-    <system:Double x:Key="FontSizeSmall" xmlns:system="clr-namespace:System;assembly=mscorlib">12</system:Double>
-    <system:Double x:Key="FontSizeRegular" xmlns:system="clr-namespace:System;assembly=mscorlib">14</system:Double>
-    <system:Double x:Key="FontSizeLarge" xmlns:system="clr-namespace:System;assembly=mscorlib">16</system:Double>
-    <system:Double x:Key="FontSizeXLarge" xmlns:system="clr-namespace:System;assembly=mscorlib">18</system:Double>
-    <system:Double x:Key="FontSizeXXLarge" xmlns:system="clr-namespace:System;assembly=mscorlib">22</system:Double>
+        <!-- 3. 폰트 관련 정의 -->
+        <ResourceDictionary Source="/Resources/Typography.xaml"/>
 
-    <!-- 4. 기본 텍스트 스타일 -->
-    <Style x:Key="BodyText" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="{StaticResource FontSizeRegular}"/>
-        <Setter Property="Foreground" Value="{StaticResource TextPrimaryBrush}"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-    </Style>
+        <!-- 4. 컨트롤 템플릿 - 스타일보다 먼저 로드되어야 함 -->
+        <ResourceDictionary Source="/Resources/ControlTemplates.xaml"/>
 
-    <Style x:Key="HeaderText" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="{StaticResource FontSizeLarge}"/>
-        <Setter Property="FontWeight" Value="SemiBold"/>
-        <Setter Property="Foreground" Value="{StaticResource TextPrimaryBrush}"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-    </Style>
-
-    <Style x:Key="TitleText" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="{StaticResource FontSizeXXLarge}"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="Foreground" Value="{StaticResource TextPrimaryBrush}"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-    </Style>
-
-    <!-- 5. 버튼 스타일 -->
-    <Style x:Key="PrimaryButton" TargetType="Button">
-        <Setter Property="Background" Value="{StaticResource PrimaryBrush}"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="FontSize" Value="{StaticResource FontSizeRegular}"/>
-        <Setter Property="Padding" Value="15,0"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Height" Value="34"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}" 
-                            BorderBrush="{TemplateBinding BorderBrush}" 
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            CornerRadius="3">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Opacity" Value="0.9"/>
-                            <Setter Property="Cursor" Value="Hand"/>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style x:Key="OutlineButton" TargetType="Button">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="{StaticResource TextPrimaryBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="FontSize" Value="{StaticResource FontSizeRegular}"/>
-        <Setter Property="Padding" Value="15,0"/>
-        <Setter Property="Height" Value="34"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}" 
-                            BorderBrush="{TemplateBinding BorderBrush}" 
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            CornerRadius="3">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="{StaticResource HoverBackgroundBrush}"/>
-                            <Setter Property="Cursor" Value="Hand"/>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style x:Key="IconButton" TargetType="Button">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Padding" Value="5"/>
-        <Setter Property="Width" Value="34"/>
-        <Setter Property="Height" Value="34"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}" 
-                            BorderBrush="{TemplateBinding BorderBrush}" 
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            CornerRadius="3">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="{StaticResource HoverBackgroundBrush}"/>
-                            <Setter Property="Cursor" Value="Hand"/>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <!-- 6. 탭 버튼 스타일 (TopNavBar용) -->
-    <Style x:Key="TabRadioButtonStyle" TargetType="RadioButton">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Padding" Value="15,0"/>
-        <Setter Property="Foreground" Value="{StaticResource TextSecondaryBrush}"/>
-        <Setter Property="FontSize" Value="{StaticResource FontSizeRegular}"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="RadioButton">
-                    <Grid>
-                        <Border Background="Transparent" Padding="{TemplateBinding Padding}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                        <Border x:Name="UnderlineBorder" Background="{StaticResource PrimaryBrush}" 
-                                Height="2" VerticalAlignment="Bottom" Opacity="0"/>
-                    </Grid>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsChecked" Value="True">
-                            <Setter Property="Foreground" Value="{StaticResource PrimaryBrush}"/>
-                            <Setter Property="FontWeight" Value="SemiBold"/>
-                            <Setter TargetName="UnderlineBorder" Property="Opacity" Value="1"/>
-                        </Trigger>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Cursor" Value="Hand"/>
-                            <Setter Property="Foreground" Value="{StaticResource PrimaryBrush}"/>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <!-- 7. DataGrid 스타일 -->
-    <Style x:Key="DataGridRowStyle" TargetType="DataGridRow">
-        <Setter Property="Height" Value="42"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{StaticResource HoverBackgroundBrush}"/>
-            </Trigger>
-        </Style.Triggers>
-    </Style>
-
-    <Style x:Key="DataGridHeaderStyle" TargetType="DataGridColumnHeader">
-        <Setter Property="Background" Value="{StaticResource HeaderBackgroundBrush}"/>
-        <Setter Property="Foreground" Value="{StaticResource TextPrimaryBrush}"/>
-        <Setter Property="FontWeight" Value="SemiBold"/>
-        <Setter Property="Height" Value="50"/>
-        <Setter Property="Padding" Value="10,0"/>
-        <Setter Property="BorderThickness" Value="0"/>
-    </Style>
-
-    <Style x:Key="DataGridCenterCellStyle" TargetType="TextBlock">
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="5"/>
-    </Style>
-
-    <Style x:Key="DataGridLeftCellStyle" TargetType="TextBlock">
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="5"/>
-    </Style>
-
-    <!-- 8. DatePicker 스타일 -->
-    <Style x:Key="CustomDatePickerStyle" TargetType="DatePicker">
-        <Setter Property="Height" Value="34"/>
-        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
-        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
-        <Setter Property="FontSize" Value="{StaticResource FontSizeRegular}"/>
-    </Style>
-
-    <!-- 9. ComboBox 스타일 -->
-    <Style x:Key="CustomComboBoxStyle" TargetType="ComboBox">
-        <Setter Property="Height" Value="36"/>
-        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
-        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
-        <Setter Property="FontSize" Value="{StaticResource FontSizeRegular}"/>
-    </Style>
-
-    <!-- 10. 검색 TextBox 스타일 -->
-    <Style x:Key="SearchBoxStyle" TargetType="TextBox">
-        <Setter Property="Height" Value="36"/>
-        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
-        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
-        <Setter Property="FontSize" Value="{StaticResource FontSizeRegular}"/>
-        <Setter Property="Padding" Value="10,0"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-    </Style>
-
-    <!-- 11. CheckBox 스타일 -->
-    <Style x:Key="CustomCheckBoxStyle" TargetType="CheckBox">
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Foreground" Value="{StaticResource TextPrimaryBrush}"/>
-        <Setter Property="Margin" Value="0,0,0,10"/>
-    </Style>
-
-    <!-- 12. RadioButton 스타일 -->
-    <Style x:Key="CustomRadioButtonStyle" TargetType="RadioButton">
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Foreground" Value="{StaticResource TextPrimaryBrush}"/>
-        <Setter Property="Margin" Value="0,0,0,10"/>
-    </Style>
-
-    <!-- 심각도 아이콘을 위한 템플릿 -->
-    <DataTemplate x:Key="ErrorIconTemplate">
-        <Grid>
-            <Ellipse Width="20" Height="20" Fill="{StaticResource ErrorBrush}"/>
-            <TextBlock Text="!" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        </Grid>
-    </DataTemplate>
-
-    <DataTemplate x:Key="WarningIconTemplate">
-        <Grid>
-            <Ellipse Width="20" Height="20" Fill="{StaticResource WarningBrush}"/>
-            <TextBlock Text="!" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        </Grid>
-    </DataTemplate>
-
-    <DataTemplate x:Key="SuccessIconTemplate">
-        <Grid>
-            <Ellipse Width="20" Height="20" Fill="{StaticResource SuccessBrush}"/>
-            <TextBlock Text="✓" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        </Grid>
-    </DataTemplate>
-
-    <DataTemplate x:Key="InfoIconTemplate">
-        <Grid>
-            <Ellipse Width="20" Height="20" Fill="{StaticResource InfoBrush}"/>
-            <TextBlock Text="i" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        </Grid>
-    </DataTemplate>
-
-    <!-- TabControl 헤더 숨김 스타일 -->
-    <Style x:Key="HiddenTabControlStyle" TargetType="TabControl">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="TabControl">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="0"/>
-                            <!-- 헤더 영역을 숨김 -->
-                            <RowDefinition Height="*"/>
-                            <!-- 탭 항목 영역 -->
-                        </Grid.RowDefinitions>
-
-                        <!-- 헤더 영역 (숨김) -->
-                        <TabPanel x:Name="HeaderPanel" Grid.Row="0" 
-                                IsItemsHost="True" Visibility="Collapsed" />
-
-                        <!-- 탭 항목 영역 -->
-                        <Border Grid.Row="1" Background="{TemplateBinding Background}"
-                                BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}">
-                            <ContentPresenter x:Name="PART_SelectedContentHost" 
-                                          ContentSource="SelectedContent"
-                                          HorizontalAlignment="Stretch"
-                                          VerticalAlignment="Stretch" />
-                        </Border>
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+        <!-- 5. 스타일 정의 - 템플릿을 참조하므로 마지막에 로드 -->
+        <ResourceDictionary Source="/Resources/Styles.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
