--- a/Resources/Styles.xaml
+++ b/Resources/Styles.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- 버튼 스타일 -->
+    <!-- 기본 버튼 스타일 업데이트 - PrimaryButton -->
     <Style x:Key="PrimaryButton" TargetType="Button">
         <Setter Property="Background" Value="{DynamicResource PrimaryBrush}"/>
         <Setter Property="Foreground" Value="White"/>
@@ -8,9 +9,38 @@
         <Setter Property="Padding" Value="15,0"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Height" Value="{DynamicResource ControlHeightRegular}"/>
-        <Setter Property="Template" Value="{DynamicResource DefaultButtonTemplate}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border x:Name="border" 
+                        Background="{TemplateBinding Background}" 
+                        BorderBrush="{TemplateBinding BorderBrush}" 
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="4"
+                        SnapsToDevicePixels="True"
+                        UseLayoutRounding="True">
+                        <ContentPresenter HorizontalAlignment="Center" 
+                                    VerticalAlignment="Center"
+                                    Margin="{TemplateBinding Padding}"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="border" Property="Opacity" Value="0.8"/>
+                            <Setter Property="Cursor" Value="Hand"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="border" Property="Opacity" Value="0.6"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="border" Property="Opacity" Value="0.4"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
+    <!-- 아웃라인 버튼 스타일 업데이트 -->
     <Style x:Key="OutlineButton" TargetType="Button">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="{DynamicResource TextPrimaryBrush}"/>
@@ -19,16 +49,67 @@
         <Setter Property="FontSize" Value="{DynamicResource FontSizeRegular}"/>
         <Setter Property="Padding" Value="15,0"/>
         <Setter Property="Height" Value="{DynamicResource ControlHeightRegular}"/>
-        <Setter Property="Template" Value="{DynamicResource OutlineButtonTemplate}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border x:Name="border" 
+                        Background="{TemplateBinding Background}" 
+                        BorderBrush="{TemplateBinding BorderBrush}" 
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="4"
+                        SnapsToDevicePixels="True"
+                        UseLayoutRounding="True">
+                        <ContentPresenter HorizontalAlignment="Center" 
+                                    VerticalAlignment="Center"
+                                    Margin="{TemplateBinding Padding}"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="border" Property="Background" Value="{DynamicResource HoverBackgroundBrush}"/>
+                            <Setter Property="Cursor" Value="Hand"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="border" Property="Background" Value="#F0F0F0"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
+    <!-- 아이콘 버튼 스타일 업데이트 -->
     <Style x:Key="IconButton" TargetType="Button">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Padding" Value="5"/>
         <Setter Property="Width" Value="{DynamicResource IconButtonSize}"/>
         <Setter Property="Height" Value="{DynamicResource IconButtonSize}"/>
-        <Setter Property="Template" Value="{DynamicResource OutlineButtonTemplate}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border x:Name="border" 
+                        Background="{TemplateBinding Background}" 
+                        BorderBrush="{TemplateBinding BorderBrush}" 
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="4"
+                        SnapsToDevicePixels="True"
+                        UseLayoutRounding="True">
+                        <ContentPresenter HorizontalAlignment="Center" 
+                                    VerticalAlignment="Center"
+                                    Margin="{TemplateBinding Padding}"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="border" Property="Background" Value="{DynamicResource HoverBackgroundBrush}"/>
+                            <Setter Property="Cursor" Value="Hand"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="border" Property="Background" Value="#F0F0F0"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <!-- 탭 버튼 스타일 (TopNavBar용) -->
@@ -211,7 +292,7 @@
         <Setter Property="Height" Value="{DynamicResource ControlHeightLarge}"/>
     </Style>
 
-    <!-- DatePicker 기본 스타일 - 모든 DatePicker에 적용됨 -->
+    <!-- DatePicker 스타일 수정 - 캘린더 표시 문제 해결 -->
     <Style TargetType="DatePicker">
         <Setter Property="Height" Value="{DynamicResource ControlHeightRegular}"/>
         <Setter Property="BorderBrush" Value="#999999"/>
@@ -222,62 +303,59 @@
         <Setter Property="Padding" Value="5,0"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
-        <Setter Property="CalendarStyle">
-            <Setter.Value>
-                <Style TargetType="Calendar">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="Calendar">
-                                <Border BorderThickness="1" BorderBrush="#999999" CornerRadius="4" Background="White">
-                                    <StackPanel>
-                                        <CalendarItem x:Name="PART_CalendarItem" 
-                                                      BorderBrush="{TemplateBinding BorderBrush}" 
-                                                      BorderThickness="{TemplateBinding BorderThickness}" 
-                                                      Background="{TemplateBinding Background}"/>
-                                    </StackPanel>
-                                </Border>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <!-- 사용자 정의 DatePicker 스타일 -->
-    <Style x:Key="CustomDatePickerStyle" TargetType="DatePicker" BasedOn="{StaticResource {x:Type DatePicker}}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="DatePicker">
-                    <Border CornerRadius="4" 
-                            Background="{TemplateBinding Background}" 
-                            BorderThickness="{TemplateBinding BorderThickness}" 
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            SnapsToDevicePixels="True"
+                    <Grid>
+                        <Border x:Name="PART_Root" Background="{TemplateBinding Background}" 
+                            BorderBrush="{TemplateBinding BorderBrush}" 
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            CornerRadius="4" 
+                            SnapsToDevicePixels="True" 
                             UseLayoutRounding="True">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <DatePickerTextBox x:Name="PART_TextBox" 
-                                              Grid.Column="0" 
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <DatePickerTextBox x:Name="PART_TextBox" 
+                                              Grid.Column="0"
+                                              HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                              VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
                                               Foreground="{TemplateBinding Foreground}"
+                                              FontWeight="{TemplateBinding FontWeight}"
+                                              FontStyle="{TemplateBinding FontStyle}"
+                                              FontStretch="{TemplateBinding FontStretch}"
+                                              FontSize="{TemplateBinding FontSize}"
+                                              FontFamily="{TemplateBinding FontFamily}"
                                               Background="{TemplateBinding Background}"
                                               BorderThickness="0"
                                               Padding="{TemplateBinding Padding}"/>
-                            <Button x:Name="PART_Button"
+                                <Button x:Name="PART_Button" 
                                   Grid.Column="1"
-                                  Margin="3,0,3,0"
-                                  Width="20"
+                                  Focusable="False"
+                                  Width="30"
                                   Background="Transparent"
-                                  BorderThickness="0"
-                                  Focusable="False">
-                                <Path Fill="#999999" 
+                                  BorderThickness="0">
+                                    <Path Fill="#999999" 
                                      Data="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1"/>
-                            </Button>
-                        </Grid>
-                    </Border>
+                                </Button>
+                            </Grid>
+                        </Border>
+                        <Popup x:Name="PART_Popup" 
+                           StaysOpen="False" 
+                           Placement="Bottom" 
+                           VerticalOffset="1"
+                           AllowsTransparency="True"
+                           PlacementTarget="{Binding ElementName=PART_Root}">
+                            <Border BorderBrush="#999999" 
+                               BorderThickness="1" 
+                               Background="White" 
+                               CornerRadius="4">
+                                <Calendar x:Name="PART_Calendar" />
+                            </Border>
+                        </Popup>
+                    </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="BorderBrush" Value="#666666"/>
@@ -288,6 +366,9 @@
         </Setter>
     </Style>
 
+    <!-- 사용자 정의 DatePicker 스타일 -->
+    <Style x:Key="CustomDatePickerStyle" TargetType="DatePicker" BasedOn="{StaticResource {x:Type DatePicker}}">
+    </Style>
     <!-- CheckBox 기본 스타일 - 모든 CheckBox에 적용됨 -->
     <Style TargetType="CheckBox">
         <Setter Property="VerticalContentAlignment" Value="Center"/>
